log
Sun 14 Aug 2022 06:24:46 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   15 |   scanf("%d %d", &a ,&b);
      |   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c0567cd
Sun 14 Aug 2022 06:25:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7e15a87
Sun 14 Aug 2022 07:02:39 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:53:3: error: too few arguments to function ‘sumaN’
   53 |   sumaN()
      |   ^~~~~
exercises.c:22:5: note: declared here
   22 | int sumaN(int a[], int N) {
      |     ^~~~~
exercises.c:53:10: error: expected ‘;’ before ‘}’ token
   53 |   sumaN()
      |          ^
      |          ;
   54 | }
      | ~         
Compilation failed
351ce8e
Sun 14 Aug 2022 07:02:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3d5ae76
Sun 14 Aug 2022 07:04:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:53:9: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   53 |   sumaN(*aux,m);
      |         ^~~~
      |         |
      |         int
exercises.c:22:15: note: expected ‘int *’ but argument is of type ‘int’
   22 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
93107d5
Sun 14 Aug 2022 07:04:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a068339
Sun 14 Aug 2022 07:11:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
870ea7c
Sun 14 Aug 2022 07:12:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:53:20: error: expected expression before ‘]’ token
   53 |   *suma= sumaN(aux[],m);
      |                    ^
Compilation failed
2215938
Sun 14 Aug 2022 07:12:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
cb0e9a7
